force-app/main/default/objects/Intapp_Resource__c/Intapp_Resource__c.object-meta.xml
<CustomObject>
    <label>Intapp Resource</label>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>Intapp Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intapp Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>