force-app/main/default/objects/Intapp_Resource__c/fields/Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>Resource_Email__c</fullName>
    <label>Resource Email</label>
    <type>Email</type>
</CustomField>