force-app/main/default/objects/Intapp_Resource__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <inlineHelpText>Please choose the type of resource</inlineHelpText>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Survey_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>